name: ce
version: 0.0.0.1
build-type: Simple
cabal-version: >=1.22

executable ce
  main-is: ce.hs
  build-depends:
    authenticate-oauth,
    base >= 4.5 && < 5,
    bytestring,
    http-conduit >=2.0 && <2.2,
    mysql-simple,
    random,
    resourcet,
    scientific >= 0.3.4.2,
    text,
    twitter-conduit >= 0.1.1.1,
    twitter-types >= 0.7.1,
    twitter-types-lens >= 0.7.1,
    yaml
  ghc-options: -Wall
  default-language: Haskell2010
